cicd/argo-rollouts/httproute/manifests/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: default
  hostnames:
    - "argo-rollouts.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-rollouts-dashboard
          port: 3100
